@@ -5669,50 +5669,6 @@ name|urlList
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|theUrlList
-operator|.
-name|isEmpty
-argument_list|()
-condition|)
-block|{
-for|for
-control|(
-name|String
-name|s
-range|:
-name|collectionNames
-control|)
-block|{
-if|if
-condition|(
-name|s
-operator|!=
-literal|null
-condition|)
-name|collectionStateCache
-operator|.
-name|remove
-argument_list|(
-name|s
-argument_list|)
-expr_stmt|;
-block|}
-throw|throw
-operator|new
-name|SolrException
-argument_list|(
-name|SolrException
-operator|.
-name|ErrorCode
-operator|.
-name|INVALID_STATE
-argument_list|,
-literal|"Could not find a healthy node to handle the request."
-argument_list|)
-throw|;
-block|}
 name|Collections
 operator|.
 name|shuffle
@@ -5766,6 +5722,50 @@ argument_list|(
 name|theReplicas
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|theUrlList
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+for|for
+control|(
+name|String
+name|s
+range|:
+name|collectionNames
+control|)
+block|{
+if|if
+condition|(
+name|s
+operator|!=
+literal|null
+condition|)
+name|collectionStateCache
+operator|.
+name|remove
+argument_list|(
+name|s
+argument_list|)
+expr_stmt|;
+block|}
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|INVALID_STATE
+argument_list|,
+literal|"Could not find a healthy node to handle the request."
+argument_list|)
+throw|;
 block|}
 block|}
 name|LBHttpSolrClient
